# ALMA-memory

./: .coderabbit.yaml  .env.example  .env.template  .gitattributes  .gitignore  .mcp.json  .mcp.json.template  CHANGELOG.md  CODE_REVIEW_REPORT_v0.7.1.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  GUIDE.md  README.md  RELEASE_0.7.1.md  config.yaml.example  demo.py  docs-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
.aios-core/: core-config.yaml  install-manifest.yaml
.alma/templates/: config.yaml.template
.antigravity/: antigravity.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  question.md
.github/workflows/: ci.yml  docs.yml  npm-publish.yml  publish.yml  release.yml
FIXES/: 1.1_test_validate_llm_response.py  1.1_validate_llm_response.py  1.2_api_key_from_env.py  1.3_rate_limit_and_1.4_cache.py  2.1_test_llm_error_handling.py  2.2_error_abstraction.py  2.3_test_strategy_switching.py  3.1_extract_deduplicate_and_3.2_strategy_docs.py  ALMA-INTEGRATION-COMPLETION.md  INTEGRATION_SUMMARY.txt  INTEGRATION_VALIDATION_REPORT.md  alma-integration-research.md
PRPs/: ALMA_AGTESTARI_INTEGRATION_PRP.md  ALMA_ENHANCEMENT_SUMMARY.md
aiox-presentation/: download-fonts.sh  index.html  test-notes-2.txt  test-notes.txt  test-results.txt
aiox-presentation/fonts/: caveat.css  jetbrains.css
alma/: __init__.py  cli.py  core.py  exceptions.py  types.py
alma/compression/: __init__.py  pipeline.py
alma/confidence/: __init__.py  engine.py  types.py
alma/config/: __init__.py  loader.py
alma/consolidation/: __init__.py  config.py  deduplication.py  engine.py  exceptions.py  prompts.py  rate_limit.py  strategy.py  validation.py
alma/context/: __init__.py  identity.py  memory_stack.py
alma/domains/: __init__.py  factory.py  schemas.py  types.py
alma/events/: __init__.py  emitter.py  storage_mixin.py  types.py  webhook.py
alma/extraction/: __init__.py  auto_learner.py  entity_detector.py  extractor.py
alma/graph/: __init__.py  base.py  extraction.py  store.py
alma/harness/: __init__.py  base.py  domains.py
alma/ingestion/: __init__.py  conversation_miner.py  file_miner.py  memory_extractor.py  normalizer.py
alma/initializer/: __init__.py  initializer.py  types.py
alma/integration/: __init__.py  claude_agents.py  helena.py  victor.py
alma/learning/: __init__.py  decay.py  forgetting.py  heuristic_extractor.py  protocols.py  validation.py
alma/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
alma/observability/: __init__.py  config.py  guidelines.py  logging.py  metrics.py  tracing.py
alma/progress/: __init__.py  tracker.py  types.py
alma/rag/: __init__.py  bridge.py  enhancer.py  feedback.py  feedback_types.py  metrics.py  metrics_types.py  types.py
alma/retrieval/: __init__.py  budget.py  cache.py  embeddings.py  embeddings_optimized.py  engine.py  feedback.py  hybrid.py  modes.py  progressive.py  query_sanitizer.py  reranking.py  scorer_factory.py  scoring.py  text_search.py  trust_scoring.py  verification.py
alma/session/: __init__.py  manager.py  types.py
alma/storage/: __init__.py  archive.py  azure_cosmos.py  base.py  chroma.py  constants.py  factory.py  file_based.py  pinecone.py  postgresql.py  qdrant.py  sqlite_local.py
alma/testing/: __init__.py  factories.py  mocks.py
alma/utils/: __init__.py  sanitize.py  tokenizer.py
alma/workflow/: __init__.py  artifacts.py  checkpoint.py  context.py  outcomes.py  reducers.py
benchmarks/: README.md  __init__.py  colab_benchmark.ipynb  conftest.py  results-flb-oracle-v1.0-phase1.json  results-flb-realistic-v1.0-phase1.json  results-v1.0-phase1.json
benchmarks/locomo/: README.md  (+10 more)
docs/: GOOD_FIRST_ISSUES.md  ROADMAP_TO_FUNDING.md  VIDEO_TALKING_POINTS.md
scripts/: migrate_to_azure.py  test_postgres_integration.py
site-docs/: index.html  index.md  robots.txt  sitemap.xml
tests/: __init__.py  conftest.py
videoask-research/: github-alternatives-analysis.md  tech-stack.md
(+284 files in other folders)
