[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alma-memory"
version = "0.7.0"
description = "Agent Learning Memory Architecture - Persistent memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RBKunnela", email = "aiagentsprompt@gmail.com"}
]
keywords = [
    "ai",
    "agents",
    "memory",
    "learning",
    "llm",
    "azure",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
azure = [
    "azure-cosmos>=4.5.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "openai>=1.0.0",
]
postgres = [
    "psycopg[binary,pool]>=3.1.0",
    "numpy>=1.24.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
chroma = [
    "chromadb>=0.4.0",
]
pinecone = [
    "pinecone>=3.0.0",
]
mcp = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]
rag = [
    "bm25s>=0.2.0",
    "rerankers>=0.5.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "bandit[toml]>=1.7.0",
    "numpy>=1.24.0",  # Required by SQLite storage
]
all = [
    "alma-memory[local,azure,postgres,qdrant,chroma,pinecone,mcp,rag,observability,dev]",
]

[project.urls]
Homepage = "https://github.com/RBKunnela/ALMA-memory"
Documentation = "https://github.com/RBKunnela/ALMA-memory/tree/main/docs"
Repository = "https://github.com/RBKunnela/ALMA-memory"
Issues = "https://github.com/RBKunnela/ALMA-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["alma*"]

[tool.setuptools.package-data]
alma = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert warnings (used in tests)

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "**/conftest.py"]

[tool.coverage.run]
source = ["alma"]
branch = true
omit = [
    "alma/__main__.py",
    "alma/mcp/__main__.py",
    # Optional backends - require external packages not installed in CI
    "alma/storage/qdrant.py",
    "alma/storage/pinecone.py",
    "alma/storage/chroma.py",
    "alma/graph/backends/neo4j.py",
    "alma/graph/backends/memgraph.py",
    "alma/graph/backends/kuzu.py",
]

[tool.coverage.report]
fail_under = 50  # Lowered temporarily - storage backends need integration tests
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
